# kanal_test

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
google_service/: apps.py  models.py  tasks.py  test_models.py  views.py
google_service/gspread/: table.py  unwinddigital-test-b5be7a3a2d9e.json
google_service/migrations/: 0001_initial.py  0002_alter_order_dtime.py  0003_remove_order_dtime_order_ddate.py  0004_order_overdue_message.py
kanal_test/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: base.html  index.html
