[tool.poetry]
name = "kanal_test"
version = "0.1.0"
description = ""
authors = ["Fennr <fenrir1121@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.3"
requests = "^2.28.1"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
